fix(ui): Force input spin buttons to be always visible (v3.8.1)

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,12 @@
   .dark ::-webkit-calendar-picker-indicator {
     filter: invert(1);
   }
+
+  /* Force spin buttons (arrows) to be always visible on number inputs */
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button { 
+    opacity: 1;
+  }
 }
 
 @layer base {
